# ueXRP

./: CMakeLists.txt  LICENSE  README.md
metadata/include/: metadata_digest.hpp
metadata/src/: metadata_digest.cpp
tests/: CMakeLists.txt  test_metadata.cpp  test_xrp_direct.cpp
trampoline/include/: trampoline_shim.h
trampoline/src/: trampoline_shim.c
uxrp/include/: uxrp_engine.hpp
uxrp/rust/: Cargo.toml
uxrp/rust/src/: lib.rs  main.rs
uxrp/src/: uxrp_engine.cpp
xrp_direct/include/: bluefield3_snap.hpp  xrp_direct.hpp
xrp_direct/src/: xrp_direct.cpp
